--- a/O2.ipynb
+++ b/O2.ipynb
@@ -2,12 +2,159 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sp\n",
-    "from mpmath import radians, degrees"
+    "from sympy import *\n",
+    "init_printing()\n",
+    "j = I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fakta\n",
+    "U = 231 #V\n",
+    "f = 50 #Hz\n",
+    "R1 = 9 #ohm\n",
+    "L1 = 0.02 #H\n",
+    "R2 = 5 #ohm\n",
+    "L2 = 0.005 #H\n",
+    "C = 921e-6 #F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 314.159265358979$"
+      ],
+      "text/plain": [
+       "314.159265358979"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#a\n",
+    "omega = f*2*pi\n",
+    "omega.evalf()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left( 6.28318530717959 i, \\  1.5707963267949 i, \\  - 3.45613340047547 i\\right)$"
+      ],
+      "text/plain": [
+       "(6.28318530717959⋅ⅈ, 1.5707963267949⋅ⅈ, -3.45613340047547⋅ⅈ)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#b\n",
+    "ZR1 = R1\n",
+    "ZR2 = R2\n",
+    "ZL1 = j * omega * L1\n",
+    "ZL2 = j * omega * L2\n",
+    "ZC = 1/(j * omega * C)\n",
+    "ZL1.simplify().evalf(), ZL2.simplify().evalf(), ZC.simplify().evalf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 11.0915897327512 + 3.61572223992121 i$"
+      ],
+      "text/plain": [
+       "11.0915897327512 + 3.61572223992121⋅ⅈ"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#c\n",
+    "Z =ZR1 + ZL1 + (ZR2+ZL2)*ZC/((ZR2+ZL2)+ZC)\n",
+    "Z.simplify().evalf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 18.8259903085383 - 6.13704198291141 i$"
+      ],
+      "text/plain": [
+       "18.8259903085383 - 6.13704198291141⋅ⅈ"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#e\n",
+    "I = U/Z\n",
+    "I.simplify().evalf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 2.09158973275119 - 2.66746306725838 i$"
+      ],
+      "text/plain": [
+       "2.09158973275119 - 2.66746306725838⋅ⅈ"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#f\n",
+    "#Erstatningsimpedans\n",
+    "ZP = (ZR2+ZL2)*ZC/((ZR2+ZL2)+ZC)\n",
+    "ZP.simplify().evalf()"
    ]
   },
   {
@@ -17,8 +164,11 @@
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$\\displaystyle 23.0059152065818 - 63.0538078535106 i$"
+      ],
       "text/plain": [
-       "(77.406241514663 - 62.7817245706429*I, -39.0444022391455, 99.6657973704640)"
+       "23.0059152065818 - 63.0538078535106⋅ⅈ"
       ]
      },
      "execution_count": 22,
@@ -27,161 +177,59 @@
     }
    ],
    "source": [
-    "j = sp.I\n",
-    "e = lambda x: sp.exp(x)\n",
-    "U1, U2, U3 = 60.6*e(0*j), 102.9*e(radians(80.6*j)), 164.3*e(radians(-90*j))\n",
-    "Ut = U1+U2+U3\n",
-    "Ut.simplify(), degrees(sp.arg(Ut)), sp.Abs(Ut.simplify())\n",
-    "\n"
+    "#Spændingen\n",
+    "UP = U * ZP/Z\n",
+    "UP.simplify().evalf()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle 20.351724137931 - 3.97931034482759 i$"
+       "$\\displaystyle 18.2440318550309 + 6.65654722801407 i$"
       ],
       "text/plain": [
-       "20.351724137931 - 3.97931034482759*I"
+       "18.2440318550309 + 6.65654722801407⋅ⅈ"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Z = 5 + 3*j + 1/(1/(10 + 4*j) + 1/(-5*j+7)) -6*j + 10\n",
-    "Z.evalf()"
+    "#g\n",
+    "IC = UP/ZC\n",
+    "IC.simplify().evalf()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle 2.46153846153846 + 0.307692307692308 i$"
+       "$\\displaystyle 20.0961229390446 + 0.914138201116743 i$"
       ],
       "text/plain": [
-       "2.46153846153846 + 0.307692307692308*I"
+       "20.0961229390446 + 0.914138201116743⋅ⅈ"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "U = 50*e(0*j)\n",
-    "Z1 = 5\n",
-    "Z2 = 1/(1/(5) + 1/(10*j) + 1/(-20*j))\n",
-    "In = U/Z1\n",
-    "U0 = U*Z2/(Z1+Z2)\n",
-    "Zn=(U0/In).evalf()\n",
-    "Zn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 1.25 i$"
-      ],
-      "text/plain": [
-       "1.25*I"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Z3 = -20*j\n",
-    "i3 = In * Zn/(Zn+Z3)\n",
-    "i3.evalf()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4.44587685276788 - 11.1680426541529*I, 112.076445328561 - 399.848551353977*I)"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t = sp.Symbol('t')\n",
-    "Up = 325\n",
-    "omega = 314\n",
-    "u = Up*sp.sin(omega*t)\n",
-    "L1 = 0.08\n",
-    "L2 = 0.1\n",
-    "R1 = 10\n",
-    "R2 = 10\n",
-    "R3 = 20\n",
-    "C1 = 80e-6\n",
-    "\n",
-    "ZL1 = j*omega*L1\n",
-    "ZL2 = j*omega*L2\n",
-    "ZC1 = 1/(j*omega*C1)\n",
-    "ZR1 = R1\n",
-    "ZR2 = R2\n",
-    "ZR3 = R3\n",
-    "\n",
-    "Z1 = ZL1 + ZR1\n",
-    "Z2 = ZL2 + ZR2 + ZC1 + ZR3\n",
-    "Zt = Z1*Z2/(Z1+Z2)\n",
-    "\n",
-    "i = u/Zt\n",
-    "i1 = i*Z2/(Z1+Z2)\n",
-    "i2 = i*Z1/(Z1+Z2)\n",
-    "\n",
-    "uc = i2*ZC1\n",
-    "\n",
-    "(i1/sp.sin(omega*t)).evalf(), (uc/sp.sin(omega*t)).evalf()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 16.8350978728479 + 9.70445283708304 i$"
-      ],
-      "text/plain": [
-       "16.8350978728479 + 9.70445283708304*I"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Zt.evalf()"
+    "#h\n",
+    "UL2 = UP * ZL2/(ZR2+ZL2)\n",
+    "UL2.simplify().evalf()"
    ]
   }
  ],
